# scc

./: .gitignore  AGENTS.md  CODE_REVIEW.md  CONSTITUTION.md  PLAN.md  README.md  READMEGSD.md  RELEASE_NOTES_v1.4.0.md  SCC_COMPREHENSIVE_UX_ANALYSIS.md  architecture-report.md  coverage.json  maintainability-review.md  progress.txt  pyproject.toml  pyrightconfig.json  refactor-plan.md  tasks.yaml
.gsd/: DECISIONS.md  KNOWLEDGE.md  OVERRIDES.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  event-log.jsonl  state-manifest.json
.serena/: project.yml
adr/: 0001-sandbox-runtime-vs-agent-runner.md
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  GOVERNANCE.md  MARKETPLACE.md  MARKETPLACE_INTEGRATION_PLAN.md  TROUBLESHOOTING.md
examples/: 01-quickstart-minimal.json  02-org-teams-delegation.json  03-org-strict-security.json  04-org-stdio-hardened.json  05-org-federated-teams.json  06-github-federated-skeleton.json  07-hybrid-gitlab-github-skeleton.json  08-sundsvall-ai-team-config.json  08-sundsvall-kommun-org.json  09-org-safety-net-enabled.json  10-example-org-backend-team-config.json  10-example-org-federated.json  10-example-org-frontend-team-config.json  10-example-org-ml-team-config.json  10-gavle-backend-team-config.json  10-gavle-frontend-team-config.json  10-gavle-kommun-federated.json  10-gavle-ml-team-config.json  11-release-readiness-org.json  99-complete-reference.json  README.md  ai-python-team.json  backend-java-team.json  complete-reference.json  database-dotnet-team.json  example-organization.json  frontend-react-team.json  org-stdio-hardened.json  org-strict-security.json  org-teams-delegation.json  sundsvall-organization.json  team-config-example.json
homebrew/: scc-cli.rb  sundsvalls-claude.rb
scripts/: smoke_test.sh
specs/: 01-repo-baseline-and-migration.md  02-control-plane-and-types.md  03-provider-boundary.md  04-runtime-and-egress.md  05-safety-engine.md  06-governed-artifacts.md  07-verification-and-quality-gates.md
tests/: conftest.py  test_app_dashboard_characterization.py  test_application_dashboard.py  test_application_settings.py  test_application_start_session.py  test_audit_cli.py  test_auth.py  test_auth_vocabulary_guardrail.py  test_bootstrap.py  test_bootstrap_backend_selection.py  test_cli.py  (+193 more)
(+1093 files in other folders)
