[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sundsvalls-claude"
version = "1.0.0"
description = "Safely run Claude Code with team configurations and worktree management"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sundsvalls kommun", email = "it@sundsvall.se" }
]
keywords = ["claude", "ai", "cli", "docker", "git", "worktree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
sundsvalls-claude = "sundsvalls_claude.cli:main"
scc = "sundsvalls_claude.cli:main"

[project.urls]
Homepage = "https://github.com/sundsvalls/claude-code-cli"
Documentation = "https://github.com/sundsvalls/claude-code-cli#readme"
Repository = "https://github.com/sundsvalls/claude-code-cli"
Issues = "https://github.com/sundsvalls/claude-code-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sundsvalls_claude"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# Include templates in package data
[tool.hatch.build.targets.wheel.force-include]
"src/sundsvalls_claude/templates" = "sundsvalls_claude/templates"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=sundsvalls_claude"
